# CryptoRecover

./: .gitignore  LICENSE  README.md  RESEARCH_AI_LLM_PROVIDERS.md  cryptorecover_cli.py  cryptorecover_gui.py  pyproject.toml  run.py  setup.py
cli/: __init__.py  main.py
core/: __init__.py  address_derivation.py  bruteforce_engine.py  candidate_generators.py  checkpoint.py  checksum_filter.py  gpu_accelerator.py  recovery_engine.py  verification_pipeline.py
cryptorecover_pkg/: __init__.py
cryptorecover_pkg/cli/: main.py
cryptorecover_pkg/config/: __init__.py
cryptorecover_pkg/core/: __init__.py
cryptorecover_pkg/gui/: main.py
cryptorecover_pkg/integrations/: __init__.py
cryptorecover_pkg/tests/: test_all.py
cryptorecover_pkg/utils/: __init__.py
cryptorecover_pkg/wallets/: wallet_database.py
gui/: __init__.py
integrations/: external_tools.py
src/: __init__.py  main.py
src/ai/: __init__.py  candidate_generator.py  llm_providers.py
src/bruteforce/: __init__.py  enhanced_engine.py
src/cli/: __init__.py  app.py
src/core/: __init__.py  bip39_engine.py  phonetic_visual.py
src/gui/: __init__.py  tui.py
src/utils/: __init__.py  config.py  logger.py
src/wallets/: __init__.py  registry.py
tests/: __init__.py  test_ai_providers.py  test_bip39.py  test_bruteforce.py  test_wallets.py
utils/: helpers.py
wallets/: __init__.py
