[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptorecover"
version = "2.0.0"
description = "AI-Enhanced Crypto Wallet Recovery Tool - Reimagine Bruteforce"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cysec Don", email = "cysecdon@gmail.com"},
]
keywords = ["crypto", "wallet", "recovery", "seedphrase", "bruteforce", "AI", "LLM"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]

dependencies = [
    "bip-utils>=2.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
gpu = [
    "pyopencl>=2023.0",
    "numpy>=1.24.0",
]

[project.scripts]
cryptorecover = "src.main:main"
cryptorecover-cli = "src.main:run_cli"
cryptorecover-tui = "src.main:run_tui"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
